feat: 랜딩페이지 요소 위치 조정

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   </nav>
   <header>
     <div class="header-slogan">
-      <h1>일상의 모든 물건을<br>
+      <h1>일상의 모든 물건을
          거래해 보세요</h1>
       <button class="header-button" type="button" onclick="location.href='/items.html'">
         구경하러 가기
       </button>
     </div>
-    <img alt="img_home_top" src="assets/Img_home_top.png">
+    <img class="header-img"  alt="img_home_top" src="assets/Img_home_top.png">
   </header>
   <main>
     <section>
       <img alt="hot-item" src="/assets/Frame 2608833.png"></img>
       <div>
         <span class="keyword">Hot item</span>
-        <h1>인기 상품을<br>
+        <h1>인기 상품을
             확인해 보세요
         </h1>
         <p>
@@ -46,7 +46,7 @@
       <div class="top-items">
         <span class="keyword">Search</span>
         <h1>
-            구매를 원하는<br>
+            구매를 원하는
             상품을 검색하세요
         </h1>
         <p>
@@ -61,7 +61,7 @@
       <div>
         <span class="keyword" >Register</span>
         <h1>
-          판매를 원하는<br>
+          판매를 원하는
           상품을 등록하세요
         </h1>
         <p>
