feat: 랜딩페이지 sns 공유 메타태그 설정

--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
   <link rel="stylesheet" href="/CSS/reset.css">
   <link rel="stylesheet" href="/CSS/global.css">
   <link rel="stylesheet" href="/CSS/styles.css">
-  
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
+  <!-- 페이스북,카카오,디스코드 공유 메타태그 -->
+  <meta property="og:image" content="/assets/Img_home_top.png">
+  <meta property="og:title" content="판다마켓">
+  <meta
+      property="og:description"
+      content="일상의 모든 물건을 거래해보세요"
+  >
+  <meta property="og:url" content="https://pandamarketproject.netlify.app/">  
+  <!-- 트위터 공유 메타태그 -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="/assets/Img_home_top.png">
+  <meta
+      name="twitter:title"
+      content="판다마켓"
+  >
+  <meta
+      name="twitter:description"
+      content="일상의 모든 물건을 거래해보세요"
+  >
 </head>
 <body>
   <nav>
