feat: 사이즈 조절에 따른 h1태그 반응 설정

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
   <header>
     <div class="header-slogan">
-      <h1>일상의 모든 물건을
+      <h1>일상의 모든 물건을<br>
          거래해 보세요</h1>
       <button class="header-button" type="button" onclick="location.href='/items.html'">
         구경하러 가기
@@ -51,7 +51,7 @@
       <img alt="hot-item" src="/assets/Frame 2608833.png"></img>
       <div>
         <span class="keyword">Hot item</span>
-        <h1>인기 상품을
+        <h1 class="txt">인기 상품을<br>
             확인해 보세요
         </h1>
         <p>
@@ -63,8 +63,8 @@
     <section class="top-container">
       <div class="top-items">
         <span class="keyword">Search</span>
-        <h1>
-            구매를 원하는
+        <h1 class="txt">
+            구매를 원하는<br>
             상품을 검색하세요
         </h1>
         <p>
@@ -78,8 +78,8 @@
       <img alt="register" src="/assets/Img_home_03.png">
       <div>
         <span class="keyword" >Register</span>
-        <h1>
-          판매를 원하는
+        <h1 class="txt">
+          판매를 원하는<br>
           상품을 등록하세요
         </h1>
         <p>
