feat: 이미지 사이즈 속성 명시

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <nav>
     <a class="logo" href="/">
-      <img alt="panda-market" src="assets/Group 19.png">
+      <img id="logo-img" alt="panda-market" src="assets/Group 19.png">
     </a>
     <button class="signin" type="button" onclick="location.href='/signin.html'">
       로그인
@@ -48,7 +48,7 @@
   </header>
   <main>
     <section>
-      <img alt="hot-item" src="/assets/Frame 2608833.png"></img>
+      <img class="main-img" alt="hot-item" src="/assets/Frame 2608833.png"></img>
       <div>
         <span class="keyword">Hot item</span>
         <h1 class="txt">인기 상품을<br>
@@ -72,10 +72,10 @@
           쉽게 찾아보세요
         </p>
       </div>
-      <img alt="search" src="/assets/Img_home_02.png">
+      <img class="main-img" alt="search" src="/assets/Img_home_02.png">
     </section>
     <section>
-      <img alt="register" src="/assets/Img_home_03.png">
+      <img class="main-img"  alt="register" src="/assets/Img_home_03.png">
       <div>
         <span class="keyword" >Register</span>
         <h1 class="txt">
@@ -95,7 +95,7 @@
         믿을 수 있는<br>
         판다마켓 중고거래
       </h1>
-      <img alt="pandas" src="/assets/Img_home_bottom.png" >
+      <img class="bottom-img" alt="pandas" src="/assets/Img_home_bottom.png" >
     </div>
   </section>
   <footer>
