--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/CSS/reset.css">
   <link rel="stylesheet" href="/CSS/global.css">
-  <link rel="stylesheet" href="/CSS/styles.css">
+  <link rel="stylesheet" href="/CSS/home.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
   <!-- 페이스북,카카오,디스코드 공유 메타태그 -->
   <meta property="og:image" content="/assets/Img_home_top.png">
