--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>판다마켓</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/CSS/reset.css">
   <link rel="stylesheet" href="/CSS/global.css">
   <link rel="stylesheet" href="/CSS/home.css">
