--- a/signin.html
+++ b/signin.html
@@ -20,9 +20,9 @@
         <img alt="logo" src="/assets/logo-signin.png">        
       </a>
     </header>
-    <form>
+    <form class="input-items">
       <label for="email-input">로그인</label>
-      <input 
+      <input class="input-item"
         name="email"
         type="text"
         placeholder="이메일을 입력해주세요"
@@ -32,7 +32,7 @@
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
-        class="password-input"
+        class="password-input input-item"
         name="password"
         type="password"
         placeholder="비밀번호를 입력해주세요"
@@ -61,5 +61,6 @@
       </div>
     </form>
   </div>
+  <script src="JS/signin.js"></script>
 </body>
 </html>
