--- a/signup.html
+++ b/signup.html
@@ -21,9 +21,9 @@
         <img alt="logo" src="/assets/logo-signin.png">        
       </a>
     </header>
-    <form>
+    <form class="input-items">
       <label for="email-input">이메일</label>
-      <input 
+      <input class="input-item"
         name="email"
         type="text"
         placeholder="이메일을 입력해주세요"
@@ -31,7 +31,7 @@
         autofocus
       />
       <label for="nickname-input">닉네임</label>
-      <input 
+      <input class="input-item"
         name="nickname"
         type="text"
         placeholder="닉네임을 입력해주세요"
@@ -40,7 +40,7 @@
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
-        class="password-input"
+        class="password-input input-item"
         name="password"
         type="password"
         placeholder="비밀번호를 입력해주세요"
@@ -55,7 +55,7 @@
         <button type="button" class="visibility">
           <img alt="visibility" src="/assets/btn_visibility.png">
       </button>
-        <input autocomplete="new-password" class="password-input"
+        <input autocomplete="new-password" class="password-input input-item"
           name="password"
           type="password"
           placeholder="비밀번호를 다시 한 번 입력해주세요"
@@ -80,5 +80,6 @@
       </div>
     </form>
   </div>
+  <script src="JS/signin.js"></script>
 </body>
 </html>
