--- a/signin.html
+++ b/signin.html
@@ -22,13 +22,15 @@
     </header>
     <form class="input-items">
       <label for="email-input">로그인</label>
-      <input class="input-item"
+      <input class="input-item email"
         name="email"
         type="text"
         placeholder="이메일을 입력해주세요"
         id="email-input"
         autofocus
       />
+      <p class="empty-email">이메일을 입력해주세요</p>
+      <p class="email-error">잘못된 이메일 입니다</p>
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
@@ -38,6 +40,8 @@
         placeholder="비밀번호를 입력해주세요"
         id="password"
         />
+        <p class="empty-password">비밀번호를 입력해주세요</p>
+        <p class="password-error">비밀번호를 8자 이상 입력해주세요</p>
       <button type="button" class="visibility">
           <img alt="visibility" src="/assets/btn_visibility.png">
       </button>
