--- a/signup.html
+++ b/signup.html
@@ -23,13 +23,15 @@
     </header>
     <form class="input-items">
       <label for="email-input">이메일</label>
-      <input class="input-item"
+      <input class="email input-item"
         name="email"
         type="text"
         placeholder="이메일을 입력해주세요"
         id="email-input"
         autofocus
       />
+      <p class="empty-email">이메일을 입력해주세요</p>
+      <p class="email-error">잘못된 이메일 입니다</p>
       <label for="nickname-input">닉네임</label>
       <input class="input-item"
         name="nickname"
@@ -37,6 +39,7 @@
         placeholder="닉네임을 입력해주세요"
         id="nickname-input"
       />
+      <p class="empty-nickname">닉네임을 입력해주세요</p>
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
@@ -46,12 +49,14 @@
         placeholder="비밀번호를 입력해주세요"
         id="password"
         />
+        <p class="empty-password">비밀번호를 입력해주세요</p>
+        <p class="password-error">비밀번호를 8자 이상 입력해주세요</p>
         <button type="button" class="visibility">
           <img alt="visibility" src="/assets/btn_visibility.png">
       </button>
       </div>
       <label for="password-check">비밀번호 확인</label>
-      <div class="password-box">
+      <div class="password-box input-item">
         <button type="button" class="visibility">
           <img alt="visibility" src="/assets/btn_visibility.png">
       </button>
@@ -61,6 +66,7 @@
           placeholder="비밀번호를 다시 한 번 입력해주세요"
           id="password-check"
           />
+          <p class="passwordcheck-error">비밀번호가 일치하지 않습니다</p>
       </div>
       <button class="signin-button">회원가입</button>
       <div class="sns-signin">
@@ -80,6 +86,6 @@
       </div>
     </form>
   </div>
-  <script src="JS/signin.js"></script>
+  <script src="JS/signup.js"></script>
 </body>
 </html>
