--- a/signup.html
+++ b/signup.html
@@ -68,7 +68,7 @@
           />
           <p class="passwordcheck-error">비밀번호가 일치하지 않습니다</p>
       </div>
-      <button class="signin-button">회원가입</button>
+      <button class="signin-button" type="button" onclick="window.location.href ='/signup.html'">회원가입</button>
       <div class="sns-signin">
         <div>간편 로그인하기</div>
         <div class="sns">
