--- a/signin.html
+++ b/signin.html
@@ -34,16 +34,16 @@
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
+        id="password"
         class="password-input input-item"
         name="password"
         type="password"
         placeholder="비밀번호를 입력해주세요"
-        id="password"
         />
         <p class="empty-password">비밀번호를 입력해주세요</p>
         <p class="password-error">비밀번호를 8자 이상 입력해주세요</p>
       <button type="button" class="visibility">
-          <img alt="visibility" src="/assets/btn_visibility.png">
+          <img class="eye-icon" alt="visibility" src="/assets/btn_visibility.png">
       </button>
       </div>
 
