chore: eye-icon 파일 수정 및 불필요한 코드 삭제

--- a/signup.html
+++ b/signup.html
@@ -53,13 +53,13 @@
         <p class="empty-password">비밀번호를 입력해주세요</p>
         <p class="password-error">비밀번호를 8자 이상 입력해주세요</p>
         <button type="button" class="visibility">
-          <img  class="eye-icon" alt="visibility" src="/assets/btn_visibility.png">
+          <img  class="eye-icon" alt="visibility" src="/assets/btn_unvisibility.png">
       </button>
       </div>
       <label for="password-check">비밀번호 확인</label>
       <div class="password-box input-item">
         <button type="button" class="visibility">
-          <img class="eye-icon" alt="visibility" src="/assets/btn_visibility.png">
+          <img class="eye-icon" alt="visibility" src="/assets/btn_unvisibility.png">
       </button>
         <input 
           autocomplete="new-password" 
