--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,7 @@
         <p class="empty-password">비밀번호를 입력해주세요</p>
         <p class="password-error">비밀번호를 8자 이상 입력해주세요</p>
       <button type="button" class="visibility">
-          <img class="eye-icon" alt="visibility" src="/assets/btn_visibility.png">
+          <img class="eye-icon" alt="visibility" src="/assets/btn_unvisibility.png">
       </button>
       </div>
 
