feat: 로그인 버튼 조건 충족 시 활성화 기능

--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
       <label for="password">비밀번호</label>
       <div class="password-box">
         <input 
-        id="password"
+        id="password"s
         class="password-input input-item"
         name="password"
         type="password"
@@ -71,7 +71,7 @@
           />
           <p class="passwordcheck-error">비밀번호가 일치하지 않습니다</p>
       </div>
-      <button class="signin-button" type="button" onclick="window.location.href ='/signup.html'">회원가입</button>
+      <button class="signin-button" type="button" onclick="window.location.href ='/signup.html'" disabled> 회원가입</button>
       <div class="sns-signin">
         <div>간편 로그인하기</div>
         <div class="sns">
