feat: 회원가입 버튼 타입 수정

--- a/signin.html
+++ b/signin.html
@@ -47,7 +47,7 @@
       </button>
       </div>
 
-      <button class="signin-button" type="button" onclick="window.location.href ='/items.html'" disabled>로그인</button>
+      <button class="signin-button" type="submit" onclick="window.location.href ='/items.html'" disabled>로그인</button>
       <div class="sns-signin">
         <div>간편 로그인하기</div>
         <div class="sns">
